minor bug fix, publish

--- a/sample/index.html
+++ b/sample/index.html
@@ -1,5 +1,4 @@
 <script src="./index.js" type="module"></script>
 
-<input type="number" id="a" value="0"/>
-<input type="number" id="b" value="0"/>
-<div id="res"/>
+<input type="number" value="100" />
+<div></div>
