increase mem safety

--- a/sample/index.html
+++ b/sample/index.html
@@ -1,4 +1,4 @@
 <script src="./index.js" type="module"></script>
 
-<input type="number" value="100" />
+<input type="range" value="100" min="50" max="1000"/>
 <div></div>
